fixed spacing

--- a/projext six/css/styles.css
+++ b/projext six/css/styles.css
@@ -7,7 +7,7 @@
 
 p {
     font-family: 'Montserrat', sans-serif;
-    width: 370px;
+    width: 400px;
     font-size: 18px;
     line-height: 1.5;
     margin: 0 auto;
